<resources>
    <string name="app_name">HangOut</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="Map">View Places</string>
    <string name="title_activity_maps">Map</string>
    <string name="friends">View Friends</string>
    <string name="friends_list_title">Friends!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="maps_button">Click on a Location</string>
    <string name="hang_out">Hang Out!</string>
    <string name="x">X</string>

</resources>
